# privkit

./: .gitignore  CONTRIBUTING.md  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  privkit.attacks.rst  privkit.data.rst  privkit.ppms.rst
docs/source/_static/: custom.css
privkit/: __init__.py
privkit/attacks/: __init__.py  attack.py  hw.py  map_matching.py  peba.py  topN.py
privkit/data/: __init__.py  data_type.py  facial_data.py  location_data.py  tabular_data.py
privkit/datasets/: NCSRD_DS_5GDDoS_dataset.py  __init__.py  cabspotting_dataset.py  dataset.py  geolife_dataset.py  sketchfab_dataset.py
privkit/metrics/: __init__.py  adv_error.py  cmc.py  f1_score.py  face_detection_accuracy.py  fi_distance.py  metric.py  quality_loss.py  roc.py  ss_index.py
privkit/ppms/: __init__.py  adaptive_geo_ind.py  centroid_voxel.py  clustering_geo_ind.py  clustering_prediction.py  hash.py  hmm_tppm.py  laplace.py  merge_two_faces.py  planar_laplace.py  point_mesh_point.py  ppm.py  privacy_aware_remapping.py  smooth_knn.py  tapering.py  uniform_noise.py  uniform_remapping.py  va_gi.py
privkit/utils/: __init__.py  constants.py  dev_utils.py  discrete_utils.py  face_utils.py  geo_utils.py  io_utils.py  plot_utils.py  training_utils.py
