[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privkit"
description = "Privkit is a privacy toolkit that provides methods for privacy analysis. It implements different data types, privacy-preserving mechanisms, attacks, and privacy/utility metrics."
dynamic = ["version"]
readme = "README.md"
requires-python = '>=3'
dependencies = [
    "osmnx>=2.0.0",
    "deepface>=0.0.93",
    "open3d>=0.18.0",
    "tf-keras>=2.18.0",
    "torch>=2.5.1",
    "scikit-image>=0.24.0",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "networkx>=3.4.2",
    "scikit-learn>=1.5.2",
    "pyproj>=3.7.0",
    "matplotlib>=3.9.2"
]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://privkit.fc.up.pt"
Source = "https://github.com/privkit/privkit"
Issues = "https://github.com/privkit/privkit/issues"
Documentation = "https://privkit.fc.up.pt"

[tool.hatch.build]
packages = ["privkit"]

[tool.hatch.version]
path = "privkit/__init__.py"